--- a/style.css
+++ b/style.css
@@ -15,16 +15,16 @@
     font-family: "Chakara Petch", sans-serif;
 
  }
-
  .conteudo-principal {
-    display: fex;
+    display: flex;
     flex-direction: column;
     justify-content:center;
     align-items: center;
-    max-width: 1200px
-    width: 100%;
-    margin: 0 auto;
- }
+    max-width: 1200px;
+    width:100%;
+    margin: 0 auto ;
+
+    }
 
  .titulo-principal{
     text-align: left;
@@ -57,9 +57,14 @@
 
   .botoes{
     display: block;
+   }
 
-  }
-  @media screen  and (min-width:768px) {
+  .ativo{
+      background-color: var(--botao-ativo);
+      border-bottom: 4px;
+   }
+  
+   @media screen  and (min-width:768px) {
    .botoes{
        display: flex;
    }
